# gnome-terminal-3.6.2

./: README.md  config.h  meson.build
src/: meson.build  terminal-app.c  terminal-marshal.c  terminal-type-builtins.c  terminal-window.c
vte/: libvte-2.90-dev_1%3a0.34.9-1ubuntu2_amd64.deb  libvte-2.90-doc_1%3a0.34.9-1ubuntu2_all.deb
